--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "4.17.1",
     "joi": "^17.7.1",
     "lint": "^0.8.19",
+    "mongoose": "^6.10.0",
     "morgan": "1.10.0"
   },
   "devDependencies": {
